colortunes is active!

--- a/assets/stylesheets/scss/pages/home.scss
+++ b/assets/stylesheets/scss/pages/home.scss
@@ -12,7 +12,17 @@
   }
 }
 
+.color-tunes {
+  @include row;
 
+  .cover-picker {
+    @include span-columns(4);
+  }
+
+  .playlist {
+    @include span-columns(8);
+  }
+}
 
 
 
