--- a/assets/stylesheets/scss/single/collection.scss
+++ b/assets/stylesheets/scss/single/collection.scss
@@ -17,7 +17,7 @@
 
   img { @include border-radius(3px 3px 0 0); }
 
-  // hide the canvas, which is used for auto coloring
+  // Hide the canvas, which is used for auto coloring
   canvas { display: none; }
 }
 
