--- a/assets/stylesheets/scss/bootstrap/settings/type.scss
+++ b/assets/stylesheets/scss/bootstrap/settings/type.scss
@@ -4,12 +4,12 @@
  * =========================================================================== */
 
 // Base
-$baseFontSize:          14px;
+$baseFontSize:          16px;
 $baseLineHeight:        24px;
 $baseFontColor:         $grayDark;
 
 // Families
-$baseFontFamily:        'Cousine', 'Lucida Console', 'Andale Mono', Monaco, 'Courier New', Courier, monospace;
+$baseFontFamily:        'Karla', 'Cousine', 'Lucida Console', 'Andale Mono', Monaco, 'Courier New', Courier, monospace;
 $altFontFamily:         'Libre Baskerville', 'Times', 'Times New Roman', serif;
 
 // Sizes
