update admin icons

--- a/assets/stylesheets/scss/admin.scss
+++ b/assets/stylesheets/scss/admin.scss
@@ -8,8 +8,8 @@
 @import 'bootstrap/mixins.scss';
 
 // Admin Styles
-@import 'admin/custom-posts.scss';
-@import 'admin/select2.scss';
+// @import 'admin/custom-posts.scss';
+// @import 'admin/select2.scss';
 
 // All Headers
 h2 .nav-tab,
