add large admin icons

--- a/assets/stylesheets/scss/admin.scss
+++ b/assets/stylesheets/scss/admin.scss
@@ -8,7 +8,7 @@
 @import 'bootstrap/mixins.scss';
 
 // Admin Styles
-// @import 'admin/custom-posts.scss';
+@import 'admin/custom-posts.scss';
 // @import 'admin/select2.scss';
 
 // All Headers
