more admin style updates

--- a/assets/stylesheets/scss/admin.scss
+++ b/assets/stylesheets/scss/admin.scss
@@ -11,4 +11,4 @@
 @import 'admin/type.scss';
 @import 'admin/menu.scss';
 @import 'admin/custom-posts.scss';
-// @import 'admin/select2.scss';
+@import 'admin/select2.scss';
